--- a/contact.css
+++ b/contact.css
@@ -8,7 +8,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    color: rgb(1, 1, 30);
+   background-color:  rgb(1, 1, 30);
 }
 
 .container {
