--- a/about.css
+++ b/about.css
@@ -23,11 +23,11 @@ body{
 }
 
 .about-text{
-    max-width: 22px;
     justify-content: center;
     text-align: center;
 }
 .about-text h3{
+    padding-top: 3em;
     font-size: 22px;
     color:white;
 }
@@ -36,14 +36,12 @@ body{
 }
 .about-text p{
     line-height: 1.6;
-    margin-top: 10px;
+    margin-top: 4em;
     color:white;
 }
-@media (max-width: 768px) {
-    .about-container {
-        flex-direction: column;
-    }
+@media (max-width: 1007px) {
     .about-text {
-        text-align: center;
+        width: 70%;
+        margin: auto;
     }
 }
